# bed

./: .gitignore  Cargo.toml  LICENSE  README.md  bed-langref.md  index.html  package.json  vite.config.ts
bed/: Cargo.toml
bed/src/: args.rs  main.rs
bed/tests/: cat.bed  hello.bed  lit.rs  one-digit-add.bed  placing_marbles.bed  product.bed  reverse.bed
exec/: Cargo.toml
exec/src/: bank.rs  cmd.rs  exec.rs  inst.rs  lib.rs  print.rs  reg.rs  state.rs
inst/: Cargo.toml
inst/src/: inst.rs  lib.rs
main/: Cargo.toml
main/src/: main.rs
screen/: Cargo.toml
screen/src/: lib.rs  screen.rs
state/: Cargo.toml
state/src/: bank.rs  lib.rs  mem.rs  print.rs  ptr.rs  queue.rs  reg.rs  state.rs
state/src/state/: mem.rs  ptr.rs  reg.rs
util/: Cargo.toml
util/src/: block.rs  display.rs  lib.rs  stream.rs
view/: Cargo.toml
view/src/: editor.rs  lib.rs  print.rs  screen.rs
vm/: Cargo.toml
vm/src/: bank.rs  cmd.rs  ctrl.rs  exec.rs  inst.rs  lexer.rs  lib.rs  machine.rs  maps.rs  mem.rs  memory.rs  page.rs  reg.rs  state.rs  stream.rs  streams.rs
