[package]
name = "bed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.11", features = ["derive"] }
util = { version = "0.1.0", path = "../util" }
view = { version = "0.1.0", path = "../view" }
vm = { version = "0.1.0", path = "../vm" }

[dev-dependencies]
lit = "1.0.4"
