[package]
name = "view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
exec = { version = "0.1.0", path = "../exec" }
screen = { version = "0.1.0", path = "../screen" }
util = { version = "0.1.0", path = "../util" }
vm = { version = "0.1.0", path = "../vm" }
