[package]
name = "view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
screen = { version = "0.1.0", path = "../screen" }
util = { version = "0.1.0", path = "../util" }
vm = { version = "0.1.0", path = "../vm" }
